--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Ceelo Casino</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; margin: 20px; }
-        #login-form, #game { display: none; }
+        #login-form, #game, #match-form { display: none; }
         #players p { margin: 5px; }
         #dice span { font-size: 24px; margin: 0 10px; }
     </style>
@@ -33,8 +33,15 @@
         <p>Player: <span id="player-name"></span> | Coins: <span id="coins"></span></p>
         <button id="join-btn">Join Lobby</button>
         <div id="players"></div>
-        <input type="number" id="bet-amount" placeholder="Bet Amount" min="1">
-        <button id="bet-btn">Bet</button>
+        <div id="bet-form">
+            <input type="number" id="bet-amount" placeholder="Bet Amount" min="1">
+            <button id="bet-btn">Bet</button>
+        </div>
+        <div id="match-form">
+            <input type="number" id="match-amount" readonly>
+            <button id="match-btn">Match Bet</button>
+            <button id="leave-match-btn">Leave</button>
+        </div>
         <button id="roll-btn">Roll</button>
         <button id="leave-btn">Leave</button>
         <div id="dice">
