--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,7 @@
     <div id="room-selection">
         <h1>Join or Create Room</h1>
         <p>Player: <span id="player-name"></span> | Coins: <span id="coins"></span></p>
+        <button id="logout-btn">Logout</button>
         <div>
             <h3>Create Private Room</h3>
             <button id="create-room-btn">Create Room</button>
